# SimpleDG

./: CMakeLists.txt  README.md
include/sdg/: DependencyGraph.h
test/: CMakeLists.txt  Test.cpp
